--- a/style.css
+++ b/style.css
@@ -630,6 +630,7 @@ html {
     top: calc(110vh + 30vmax + 10vmin);
     animation-fill-mode: forwards;
     -webkit-animation-fill-mode: forwards;
+    cursor: pointer;
   }
 
   .animatenote {
@@ -639,7 +640,7 @@ html {
   }
 
   .pumpnote {
-    animation: musicnotepumping 2s ease-in-out infinite;
+    animation: musicnotepumping 2s linear infinite;
   }
 
   @keyframes animatemusicnote {
@@ -652,20 +653,40 @@ html {
 
   @keyframes musicnotepumping {
     0% {
-      transform: scale(0.5);
+      transform: scale(0.5) rotate(0deg)
+      translate(5vw)
+      rotate(0deg);
     }
     50% {
       transform: scale(1);
     }
     100% {
-      transform: scale(0.5);
+      transform: scale(0.5) rotate(360deg)
+      translate(5vw)
+      rotate(-360deg);
     }
   }
 
+
   #visualizervid {
     position: absolute;
-    width: 80vw;
+    width: 20vw;
     height: 20vh;
-    left: 10vw;
-    top: calc(110vh + 30vmax + 30vmin);
+    left: 40vw;
+    top: calc(110vh + 30vmax + 10vmin);
+    z-index: -1;
+    animation: visualizerpumping 2s ease infinite;
+    cursor: pointer;
+  }
+
+  @keyframes visualizerpumping {
+    0% {
+      transform: scale(0.8);
+    }
+    50% {
+      transform: scale(1.5);
+    }
+    100% {
+      transform: scale(0.8);
+    }
   }
