--- a/style.css
+++ b/style.css
@@ -713,3 +713,64 @@ html {
     left: 0vw;
     top: calc(710vh + 30vmax + 10vmin);
   }
+
+  #contactme {
+    position: absolute;
+    top: calc(710vh + 30vmax + 10vmin);
+  }
+
+  #contactform {
+    position: absolute;
+    top: 10vh;
+  }
+
+  #message, input[type=text], input[type=email] {
+    background-color: rgb(39, 48, 71);
+    color: white;
+    border: none;
+    transition: background-color 0.2s;
+    height: calc(1.6vw + 1.6vh);
+    width: 20vw;
+    font-size: calc(1.5vw + 1.5vh);
+  }
+
+  #message {
+    height: auto !important;
+    width: 80vw !important;
+  }
+  
+  #message:focus, input[type=text]:focus, input[type=email]:focus {
+    outline: none;
+    background-color: rgb(57, 70, 104);
+  }
+  
+  input[type=submit] {
+    border: none;
+    width: 5vw;
+    height: 5vh;
+    border-radius: 4px;
+    background-color: lightgray;
+    box-shadow: 0px 1vh darkgray;
+    transition: transform 0.2s, box-shadow 0.2s;
+  }
+  
+  input[type=submit]:hover {
+    box-shadow: 0px 0.5vh darkgray;
+    transform: translateY(0.5vh);
+    cursor: pointer;
+  }
+  
+  input[type=submit]:active {
+    box-shadow: 0px 0vh darkgray;
+    transform: translateY(1vh);
+  }
+  
+  p {
+    font-size: calc(2vw + 2vh);
+    color: white;
+  }
+
+  #invisiblediv {
+    width: 2vmax;
+    height: 2vmax;
+  }
