--- a/style.css
+++ b/style.css
@@ -765,7 +765,7 @@ html {
     transform: translateY(1vh);
   }
   
-  p {
+  #contactform p {
     font-size: calc(2vw + 2vh);
     color: white;
   }
